Commit message: Update git-summarize to support OpenRouter and add .vscode to .gitignore
- Added .vscode and .env to .gitignore
- Enhanced setup_openai to support OpenRouter with OPENROUTER_API_KEY
- Added debug logs and error handling in get_git_diff and summarize_with_openai
- Created PromptBuilder class to handle prompt construction for git diffs and commit messages
- Updated pyproject.toml with new version number and additional script entry
- Improved CLI descriptions and model parameter handling to support OpenRouter models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 # pyproject.toml
 [project]
 name = "git-summarize"
-version = "0.1.0"
-description = "Generate commit messages using OpenAI"
+version = "0.2.0"
+description = "Generate commit messages using LLM"
 dependencies = ["openai>=1.0.0"]
 
 [project.scripts]
 git-summarize = "git_summarize.cli:main"
+git-summarize-v2 = "git_summarize.cli_v2:main"
 
