Commit Message: Update README and CLI to support multiple models and Typer for better CLI handling
- Updated README to include a list of tested models
- Modified cli.py to use Typer for command line argument parsing
- Added Typer to dependencies in pyproject.toml
- Adjusted the main function to use Typer's app command decorator
- Removed old cli_v2 entry point in pyproject.toml and consolidated entry points

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@
 name = "git-summarize"
 version = "0.2.0"
 description = "Generate commit messages using LLM"
-dependencies = ["openai>=1.0.0"]
+dependencies = [
+    "openai>=1.0.0",
+    "typer>=0.6.1"
+]
 
 [project.scripts]
-git-summarize = "git_summarize.cli:main"
-git-summarize-v2 = "git_summarize.cli_v2:main"
-
+git-summarize = "git_summarize.cli:app"
