Update CLI and models to support OpenRouter model refreshing and caching
- Added functionality to refresh and cache OpenRouter models
- Updated `print_models` function to support model refreshing
- Added `refresh_openrouter_models` option to the CLI
- Fetched and cached OpenRouter models in `openrouter_models.py`
- Updated dependencies to include `requests` for API calls
- Moved static list of supported models to `FAVORITE_MODELS` and added dynamic model fetching in `models.py`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ version = "0.2.0"
 description = "Generate commit messages using LLM"
 dependencies = [
     "openai>=1.0.0",
-    "typer>=0.6.1"
+    "typer>=0.6.1",
+    "requests",
 ]
 
 [project.scripts]
