--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ dependencies = [
     "requests",
     "rich>=13.0.0",
     "inquirer>=3.1.3",
+    "pyyaml>=6.0.2",
 ]
 
 [project.scripts]
 git-summarize = "git_summarize.cli:app"
+
+[tool.setuptools]
+packages = ["git_summarize"]
