refactor: Rename CLI tool to ai-git
- Renamed the CLI tool from `git-summarize` to `ai-git`.
- Updated directory structure from `git_summarize/` to `ai_git/`.
- Updated all internal references, imports, and documentation to reflect the new name and structure.
- Updated `pyproject.toml` with the new name and entrypoint.
- Updated readme and examples to align with the new tool name and functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # pyproject.toml
 [project]
-name = "git-summarize"
+name = "ai-git"
 version = "0.2.0"
 description = "Generate Git commit messages using Large Language Models (LLM) like GPT and Qwen through OpenRouter"
 dependencies = [
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-git-summarize = "git_summarize.cli:app"
+ai-git = "ai_git.cli:app"
 
 [tool.setuptools]
-packages = ["git_summarize"]
+packages = ["ai_git"]
