feat: Add GLM-4 model alias to configuration
- Added new model alias 'glm4-free' for the GLM-4 model with free access
- Preserved existing model aliases in the configuration file

--- a/config/model-aliases.yaml
+++ b/config/model-aliases.yaml
@@ -16,3 +16,4 @@ deepseekr1: openrouter/deepseek/deepseek-r1-distill-qwen-32b
 deepseekr1free: openrouter/deepseek/deepseek-r1:free
 deepseekchatfree: openrouter/deepseek/deepseek-chat:free
 qwq32b: openrouter/qwen/qwq-32b
+glm4-free: openrouter/thudm/glm-4-32b:free
