feat: Integrate pytest for testing and coverage This commit integrates `pytest` and `pytest-cov` into the project for enhanced testing and code coverage. The following changes have been made: - Added `pytest` and `pytest-cov` as development dependencies in `pyproject.toml`. - Configured pytest in  `pyproject.toml` to discover tests. - Added `.md` document  `HOWTO_pytest.md` to instruct users in `pytest` usage. - Updated `uv.lock` to include pytest. - Updated project dependencies to reflect `pytest` changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,16 @@ ai-git = "ai_git.cli:app"
 
 [tool.setuptools]
 packages = ["ai_git"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+]
+
+[tool.pytest.ini_options]
+pythonpath = "."
+testpaths = "tests"
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
