chore: Update gemini25pro alias and move plan doc to done

--- a/config/model-aliases.yaml
+++ b/config/model-aliases.yaml
@@ -9,7 +9,7 @@ claude35: openrouter/anthropic/claude-3.5-sonnet
 claude37: openrouter/anthropic/claude-3.7-sonnet
 geminiflash20-free: openrouter/google/gemini-2.0-flash-exp:free
 geminiflash25: google/gemini-2.5-flash-preview
-gemini25pro-free: openrouter/google/gemini-2.5-pro-exp-03-25:free
+gemini25pro: openrouter/google/gemini-2.5-pro-exp-03-25
 qwen32b: openrouter/qwen/qwen-2.5-coder-32b-instruct
 qwenmax: openrouter/qwen/qwen-max
 deepseekr1: openrouter/deepseek/deepseek-r1-distill-qwen-32b
