feat: Add AI Commons dependency and configuration - Add "ai-commons" dependency from GitHub to pyproject.toml - Configure AI Common Docs repository in .roo/mcp.json

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "rich>=13.0.0",
     "inquirer>=3.1.3",
     "pyyaml>=6.0.2",
+    "ai-commons@git+https://github.com/marcbln/ai-commons.git@main",
 ]
 
 [project.scripts]
