--- a/config/model-aliases.yaml
+++ b/config/model-aliases.yaml
@@ -8,7 +8,6 @@ gpt4o: openai/gpt-4o-2024-05-13
 claude35: openrouter/anthropic/claude-3.5-sonnet
 claude37: openrouter/anthropic/claude-3.7-sonnet
 geminiflash20-free: openrouter/google/gemini-2.0-flash-exp:free
-geminiflash25: openrouter/google/gemini-2.5-flash-preview
 gemini25pro-free: openrouter/google/gemini-2.5-pro-exp-03-25
 qwen32b: openrouter/qwen/qwen-2.5-coder-32b-instruct
 qwenmax: openrouter/qwen/qwen-max
@@ -19,3 +18,5 @@ qwq32b: openrouter/qwen/qwq-32b
 qwen3: openrouter/qwen/qwen3-30b-a3b:free
 qwen3coder: openrouter/qwen/qwen3-coder:free
 glm4-free: openrouter/thudm/glm-4-32b:free
+m2: openrouter/minimax/minimax-m2
+m2-free: openrouter/minimax/minimax-m2:free
